cluster/apps/debug/echo-server/app/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo-server
  namespace: istio-ingress
spec:
  hosts:
    - 'echo-server.${DOMAIN_2}'
  gateways:
    - istio-ingress/istio-private-gateway 
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 8080
            host: echo-server.debug.svc.cluster.local
          weight: 100
